--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   },
   "scripts": {},
   "dependencies": {
+    "@types/koa": "^2.11.4",
+    "@types/koa-bodyparser": "^4.3.0",
+    "@types/koa-logger": "^3.1.1",
+    "@types/node": "^14.10.2",
     "commander": "^6.1.0",
     "execa": "^4.0.3",
     "koa": "^2.13.0",
@@ -20,11 +24,5 @@
     "ts-node": "^9.0.0",
     "ts-node-dev": "^1.0.0-pre.62",
     "typescript": "^4.0.2"
-  },
-  "devDependencies": {
-    "@types/koa": "^2.11.4",
-    "@types/koa-bodyparser": "^4.3.0",
-    "@types/koa-logger": "^3.1.1",
-    "@types/node": "^14.10.2"
   }
 }
