--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
   },
   "compilerOptions": {
     "module": "commonjs",
+    "allowJs": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "target": "es2017",
