--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "functional-api",
-  "version": "1.3.1",
+  "version": "1.4.0",
   "description": "Functional API server for node.js base on Koa and TypeScript",
   "license": "MIT",
   "repository": {},
-  "main": "./src/index.ts",
+  "main": "./src/app.ts",
   "types": "./src/index.d.ts",
   "bin": {
     "functional-api": "./bin/index.js"
   },
-  "scripts": {},
+  "scripts": {
+    "test": "ava",
+    "coverage": "c8 npm test"
+  },
   "dependencies": {
     "@types/koa": "^2.11.4",
     "@types/koa-bodyparser": "^4.3.0",
@@ -21,8 +24,45 @@
     "koa-bodyparser": "^4.3.0",
     "koa-logger": "^3.2.1",
     "npm-run-path": "^4.0.1",
+    "strip-ansi": "^6.0.0",
     "ts-node": "^9.0.0",
     "ts-node-dev": "^1.0.0-pre.63",
     "typescript": "^4.0.3"
+  },
+  "devDependencies": {
+    "@koa/cors": "^3.1.0",
+    "@types/chai": "^4.2.13",
+    "ava": "^3.13.0",
+    "c8": "^7.3.3",
+    "chai": "^4.2.0",
+    "get-port": "^5.1.1",
+    "got": "^11.7.0",
+    "qs": "^6.9.4"
+  },
+  "ava": {
+    "require": [
+      "ts-node/register"
+    ],
+    "extensions": [
+      "js",
+      "ts"
+    ],
+    "files": [
+      "test/**/*.spec.ts"
+    ],
+    "verbose": true,
+    "failWithoutAssertions": false
+  },
+  "c8": {
+    "all": true,
+    "include": [
+      "bin/**",
+      "src/**"
+    ],
+    "reporter": [
+      "html",
+      "lcov",
+      "text"
+    ]
   }
 }
