--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "scripts": {
     "test": "ava",
-    "coverage": "c8 npm test"
+    "coverage": "c8 npm test",
+    "coverage:report": "c8 report && codecov"
   },
   "dependencies": {
     "@types/koa": "^2.11.4",
@@ -35,6 +36,7 @@
     "ava": "^3.13.0",
     "c8": "^7.3.3",
     "chai": "^4.2.0",
+    "codecov": "^3.8.0",
     "get-port": "^5.1.1",
     "got": "^11.7.0",
     "qs": "^6.9.4"
