--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,11 +16,10 @@
     "pretty": true
   },
   "files": [
-    "./src/index.d.ts",
-    "./src/index.ts",
-    "./src/app.ts",
-    "./src/config.ts",
-    "./src/loader.ts"
+    "src/typings.d.ts",
+    "src/app.ts",
+    "src/config.ts",
+    "src/loader.ts"
   ],
   "exclude": ["node_modules", "**/*.spec.ts"]
 }
