--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "functional-api",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "description": "Functional API server for node.js base on Koa and TypeScript",
   "license": "MIT",
   "repository": {},
-  "main": "./src/app.ts",
-  "types": "./src/index.d.ts",
+  "main": "src/app.ts",
+  "types": "src/typings.d.ts",
   "bin": {
-    "functional-api": "./bin/index.js"
+    "functional-api": "bin/index.js"
   },
   "scripts": {
     "test": "ava",
@@ -15,10 +15,10 @@
     "coverage:report": "c8 report && codecov"
   },
   "dependencies": {
-    "@types/koa": "^2.11.4",
+    "@types/koa": "^2.11.6",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-logger": "^3.1.1",
-    "@types/node": "^14.11.2",
+    "@types/node": "^14.14.2",
     "commander": "^6.1.0",
     "execa": "^4.0.3",
     "koa": "^2.13.0",
@@ -27,18 +27,18 @@
     "npm-run-path": "^4.0.1",
     "strip-ansi": "^6.0.0",
     "ts-node": "^9.0.0",
-    "ts-node-dev": "^1.0.0-pre.63",
+    "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.3"
   },
   "devDependencies": {
     "@koa/cors": "^3.1.0",
-    "@types/chai": "^4.2.13",
+    "@types/chai": "^4.2.14",
     "ava": "^3.13.0",
-    "c8": "^7.3.3",
+    "c8": "^7.3.4",
     "chai": "^4.2.0",
     "codecov": "^3.8.0",
     "get-port": "^5.1.1",
-    "got": "^11.7.0",
+    "got": "^11.8.0",
     "qs": "^6.9.4"
   },
   "ava": {
