--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "functional-api",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "description": "Functional API server for node.js base on Koa and TypeScript",
   "author": "Cong Min",
   "license": "MIT",
@@ -36,6 +36,7 @@
     "koa": "^2.13.0",
     "koa-bodyparser": "^4.3.0",
     "koa-logger": "^3.2.1",
+    "minimatch": "^3.0.4",
     "npm-run-path": "^4.0.1",
     "strip-ansi": "^6.0.0",
     "ts-node": "^9.0.0",
